# textgen

./: .gitignore  README.md  pyproject.toml
src/textgen/: __init__.py  diffusion.py  main.py  trainer.py  transforms.py  unet.py
