[project]
name = "textgen"
version = "0.1.0"
description = "Starter code for loading and visualizing document datasets"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "pillow",
    "numpy",
    "torch",
    "tuna>=0.5.13",
    "atria-datasets",
]

[tool.uv.sources]
atria-datasets = { path = "../atria/atria_datasets" }

[tool.uv]
managed = true
package = true

[tool.setuptools.packages.find]
where = ["src"]

