[project]
name = "textgen"
version = "0.1.0"
description = "Starter code for loading and visualizing document datasets"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "pillow",
    "numpy",
    "torch",
    "tuna>=0.5.13",
    "atria-datasets",
    "atria-registry",
    "atria-logger",
    "atria-types",
]

[tool.uv.sources]
atria-datasets   = { path = "./external/atria_datasets",  editable = true }
atria-registry   = { path = "./external/atria_registry",  editable = true }
atria-logger     = { path = "./external/atria_logger",    editable = true }
atria-types      = { path = "./external/atria_types",     editable = true }

[tool.uv]
managed = true
package = true

[tool.setuptools.packages.find]
where = ["src"]